# diploma-code

./: .gitignore  test.py
mojom/: test.mojom  test2.mojom
mojom/generator/: clients_generator.py  definitions_generator.py  definitions_generator_um.py  generator.py  runtime_generator.py  runtime_generator_um.py  servers_generator.py  servers_generator_um.py
mojom/generator/GeneTests/: GeneTests.vcxproj  pch.h  serializer_unittests.cpp
mojom/generator/gene/: CMakeLists.txt  Diploma.sln  Generator.sln  Generator.vcxproj  Generator.vcxproj.filters  Makefile  TestUser.vcxproj  TestUser.vcxproj.filters  gene_basics.cpp  gene_basics.h  gene_basics_um.cpp  gene_constraints.h  gene_embedded_types.h  gene_includes.h  gene_size_constraints.h  main.cpp
mojom/generator/gene/TestDriver/: Driver.cpp  KString.cpp  KString.h  KVector.h  Public.h  TestDriver.inf  TestDriver.vcxproj  TestDriver.vcxproj.filters  gene_ioctl.cpp  gene_ioctl.h  gene_km_basics.cpp  gene_km_basics.h  gene_km_constraints.h  gene_km_embedded_types.h  kmoptional.h  kmstdint.h  libc.cpp  libc.h
mojom/parse/: ast.py  lexer.py  parser.py
mojom/ply/: yacc.py
